@@ -1,6 +1,7 @@
 # 2012-4-9
 
 - Changed BMI normal range for adults to 18-25
+- Added reordering of patients
 
 # 2012-4-8
 
